--- a/index.html
+++ b/index.html
@@ -4,10 +4,89 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" />
     <title>QuoteBook</title>
   </head>
   <body>
-
+    <header>
+      <h1>Quotebook</h1>
+      <ul>
+        <a href="#div--a"><li>Lorem Quotes</li></a>
+        <a href="#div--b"><li>Ipsum Quotes</li></a>
+        <a href="#div--c"><li>Dolor Quotes</li></a>
+        <a href="quotes.html"><li>Actual Quotes</li></a>
+    </header>
+    <main>
+      <div>
+      </div>  
+      <div>
+        <section>
+          <h2 id="div--a">Lorem Quotes</h2>
+          <article>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequuntur."</p>
+          <figcaption>-anon
+          </article> 
+          <article>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequuntur."</p>
+            <figcaption>-anon
+          </article>
+          <article>  
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequuntur."</p>
+            <figcaption>-anon
+          </article>
+          <article>  
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequuntur."</p>
+            <figcaption>-anon
+          </article>
+        </section>
+        <section>
+          <h2 id="div--b">Ipsum Quotes</h2>
+          <article>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis expedita eaque aliquam a autem dolores voluptatibus!</p>
+            <figcaption>-anon
+          </article> 
+          <article>
+            <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit."</p>
+            <figcaption>-anon
+          </article>
+          <article>  
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum laborum odio dolorum quas placeat eius commodi distinctio ea."</p>
+            <figcaption>-anon
+          </article>  
+          <article>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequuntur."</p>
+            <figcaption>-anon
+          </article>    
+          <article>  
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequuntur."</p>
+            <figcaption>-anon
+          </article>
+        </section>
+        <section>
+          <h2 id="div--c">Dolor Quotes</h2>
+          <article>
+            <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci ipsam numquam esse doloribus ex minima quam aliquam eius."</p>
+          <figcaption>-anon
+          </article> 
+          <article>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequuntur."</p>
+            <figcaption>-anon
+          </article>
+          <article>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequuntur."</p>
+            <figcaption>-anon
+          </article>    
+          <article>  
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequuntur."</p>
+            <figcaption>-anon
+          </article>
+        </section>    
+      </div>
+      <div>
+      </div>
+    </main>  
   </body>
 </html>
